<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guindo"
    tools:context=".crear_cuenta">

    <View
        android:id="@+id/fondo_blanco"
        android:layout_width="0dp"
        android:layout_height="700dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fondo_redondo_blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_registrar"
        android:textColor="@color/gold"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondo_blanco" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_instru_reg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt_correo_reg"
        android:layout_width="363dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_cajas_texto_guindo"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="tucorreo@example.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_correo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_contra"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo_reg" />

    <EditText
        android:id="@+id/txt_contra_reg"
        android:layout_width="363dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/fondo_cajas_texto_guindo"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/lbl_contra"
        android:inputType="textPassword"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_tengo_cuenta"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/lbl_iniciar_sesion"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contra_reg" />

    <TextView
        android:id="@+id/lbl_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_iniciar_sesion"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contra_reg" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>