<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guindo"
    tools:context=".landing_paciente">

    <View
        android:id="@+id/fondo_blanco"
        android:layout_width="415dp"
        android:layout_height="307dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fondo_redondo_blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/fondo_blanco2"
        android:layout_width="414dp"
        android:layout_height="201dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fondo_redondo_blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_citas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_citas"
        android:textColor="@color/gold"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondo_blanco" />

    <Button
        android:id="@+id/btn_crear_citas"
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_crear_cita"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_citas" />

    <Button
        android:id="@+id/btn_consulta_citas"
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gold"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_consulta_cita"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crear_citas" />

    <TextView
        android:id="@+id/lbl_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/lbl_paciente"
        android:textColor="@color/gold"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondo_blanco2" />

    <Button
        android:id="@+id/btn_edit_paciente"
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/guindo"
        android:fontFamily="@font/montserrat_medium"
        android:onClick="abrirActivities"
        android:text="@string/btn_edit_paciente"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_paciente" />
</androidx.constraintlayout.widget.ConstraintLayout>